--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-/build/
-
 # Created by https://www.toptal.com/developers/gitignore/api/windows,java,eclipse
 # Edit at https://www.toptal.com/developers/gitignore?templates=windows,java,eclipse
 
@@ -67,7 +65,14 @@ local.properties
 
 ### Eclipse Patch ###
 # Spring Boot Tooling
-.sts4-cache/
+.sts4-cache
+
+# JDT-specific
+.classpath
+#eclipseCore
+.project
+#Annotation processing
+.apt_generated
 
 ### Java ###
 # Compiled class file
